--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,25 +1,28 @@
+<div class="panel panel-default">
 <div class="row">
   <div class="col-xs-12">
-    <div class="panel panel-default"></div>
-    <div class="panel-heading"><h2><strong>Contacts</strong></h2></div>
-    <button class="btn btn-success">New Contact</button>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-        <p class="list-group-item-text">{{ contact.description }}</p>
+      <div class="panel-heading">
+        <div style='float: left; font-size: 2em;'>
+          <strong>Contacts</strong>
+        </div>
+        <div style='float: right;'><button class="btn btn-success">New Contact</button></div>
       </div>
-      <span class="pull-right">
-        <img 
-        [src]="contact.imagePath" 
-        alt="{{ contact.name }}" 
-        class="img-responsive" 
-        style="max-height: 50px;">
-      </span>
-    </a>
-    <cms-contact-list></cms-contact-list>
+    </div>
+    <hr>
+    <div class="panel-body">
+    <div class="col-xs-12">
+      <div class="row">
+        <div class="col-xs-12">
+          <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
+            <div class="pull-left">
+              <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+            </div>
+            <span class="pull-right">
+              <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
