--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-5">
-    <h2>contact-list goes here</h2>
+    <cms-contact-list></cms-contact-list>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-4">
     <cms-contacts-detail></cms-contacts-detail>
   </div>
 </div>
